chore: 基本文件结构

--- a/src/render/layouts/index.less
+++ b/src/render/layouts/index.less
@@ -1,7 +1,6 @@
 .app-layout {
   .logo {
     padding: 9px;
-    border-bottom: 1px solid #ededed;
 
     img {
       width: calc(var(--header-height) - 19px);
@@ -11,7 +10,7 @@
 
   .app-header {
     height: var(--header-height);
-    border-bottom: 1px solid #ededed;
+    box-shadow: 0 0 10px -4px #ddd;
   }
 
   .app-sider {
